# ticketr

./: Cargo.toml
meta/: Cargo.toml
meta/src/: main.rs
output/: ticketr.abi.json  ticketr.imports.json  ticketr.mxsc.json  ticketr.wasm
scenarios/: ticketr.scen.json
src/: ticketr.rs
tests/: ticketr_scenario_go_test.rs  ticketr_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
