[package]
name = "ticketr"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/ticketr.rs"

[dependencies.multiversx-sc]
version = "0.59.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.59.0"

[workspace]
members = [
    ".",
    "meta",
]
